<resources>
    <string name="app_name">LAMASYA</string>
    <string name="title_home">Home</string>
    <string name="title_contact">Contact</string>
    <string name="title_profile">Profile</string>
    <string name="tittle_weather">Cuaca</string>
    <string name="tittle_notification">Notification</string>
    <string name="tittle_detail_profile">Detail Profile</string>
    <string name="tittle_change_password">Ubah Password</string>
    <string name="tittle_save">Simpan</string>
    <string name="tittle_detail_photo">Detail Foto</string>
    <string name="tittle_comment">Komentar</string>

    <!--    material-->
    <string name="welcome_to_lamasya">Selamat Datang di Lamasya</string>
    <string name="first_name">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="new_password2">Ulangi Kata Sandi Baru</string>
    <string name="image">gambar</string>
    <string name="gender">jenis kelamin</string>
    <string name="male">Laki - Laki</string>
    <string name="female">Perempuan</string>
    <string name="phone">No Telepon</string>
    <string name="age">Umur</string>
    <string name="type_situation">Tipe Situasi</string>
    <string name="title">Title</string>

    <string name="nama_instansi">RSIA SURYA ABADI PRIGEN</string>
    <string name="Nama_orang">Kiba Inuzuka</string>
    <string name="address">Jl. Raya Prigen No.5, Plembon, Kecamatan Prigen</string>
    <string name="typeRs">Rumah sakit Umum</string>
    <string name="call">(0343) 882200</string>
    <string name="buka">Buka 24 Jam</string>
    <string name="Time">1 Jam Yang Lalu</string>


    <!--    action-->
    <string name="login">Masuk</string>
    <string name="let_s_explore">Let’s Explore</string>
    <string name="or_login_with">Atau Login menggunakan</string>
    <string name="please_choose_your_login_option_below">Mohon pilih opsi Masuk Akun</string>
    <string name="create_account">Buat Akun</string>
    <string name="does_not_have_account">Belum Punya akun?</string>
    <string name="invalid_email_or_password">Email atau Password salah</string>
    <string name="email_not_found">Email tidak terdaftar</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="register">Daftar</string>
    <string name="tittle_send">Kirim</string>
    <string name="write_a_comment">Tulis komentar</string>
    <string name="comment_success">Komentar terkirim</string>

    <string name="createTittle">Buat Akun</string>
    <string name="createTitleDesc">Dapatkan fitur terbaik LAMASYA dengan membuat akun</string>
    <string name="already_have_an_account">Sudah Punya akun?</string>

    <string name="go_back">Kembali</string>
    <string name="please_fill_field">Mohon isi kolom ini</string>
    <string name="invalid_password">Password harus lebih dari 6 karakter</string>
    <string name="email_cant_null">Email tidak boleh kosong</string>
    <string name="please_accept_term">Mohon ceklist Syarat dan Ketentuan</string>
    <string name="auth_fail">Autentikasi Gagal</string>
    <string name="gender_option_null">Mohon pilih jenis kelamin</string>
    <string name="password_must_same">Password harus sama</string>
    <string name="password_cant_same">Password Lama dan baru tidak boleh sama</string>

    <string name="tittleAccept">Saya menerima syarat dan ketentuan</string>
    <string name="password_request_has_been_sent">"Email reset password telah dikirim"</string>
    <string name="send_email">kirim Email</string>

    <string name="info_Profile">Info Profil</string>


    <!--    desc-->
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tellus at mi pretium lacus. Leo erat massa blandit ac commodo. Sed in vitae tristique phasellus. Egestas quis morbi consectetur laoreet eu libero,</string>
    <string name="contentDesc">Ini adalah gambar untuk konten</string>
    <string name="typeDesc">ini adalah deskripsi konten tipe situasi</string>
    <string name="doodDesc">ini adalah ikon dood</string>
    <string name="CallDesc">ini adalah ikon phone</string>
    <string name="rsDesc">ini adalah ikon rumah sakit</string>
    <string name="locationDesc">ini adalah ikon rumah sakit</string>
    <string name="google_login">Login with Google</string>
    <string name="search_view_text">Search in All</string>

    <string name="photo_profile">ini adalah foto profile pribadi</string>
    <string name="detail_photo_profile">ini adalah detail foto profile pribadi</string>


    <!-- Camera -->
    <string name="switchCamera">Ganti Kamera</string>
    <string name="captureImage">Ambil Gambar</string>
    <string name="failedTakePic">Gagal mengambil gambar</string>
    <string name="failShowCamera">Gagal menampilkan kamera</string>
    <string name="hintDescription">Apa Yang sedang terjadi</string>
    <string name="galeriDesc">Tambahkan Foto lewat galeri</string>
    <string name="cameraDesc">Tambahkan Foto lewat kamera</string>
    <string name="posting">Posting</string>
    <string name="no_photo">tidak ada photo</string>

    <!-- notif -->
    <string name="update_success">Data berhasil diubah</string>
    <string name="update_unsuccess">Data belum berhasil diubah</string>

    <string-array name="situation">
        <item>lalu lintas</item>
        <item>bencana alam</item>
        <item>kesehatan</item>
    </string-array>

    <string name="rumah_sakit">Rumah Sakit</string>
    <string name="polisi">Polisi</string>
    <string name="damkar">Pemadam Kebakaran</string>
    <string name="tittle_change_photo">Change photo profile</string>
    <string name="maps_tittle">ini link maps</string>
    <string name="title_detail">Detail Instansi</string>
    <string name="take_photo">ini adalah Gambar untuk mengambil gambar</string>
    <string name="switchDesc">ini adalah tombol untuk memutar kamera</string>
    <string name="noPhoto">tidak ada photo</string>
    <string name="mainDesc">ini adalah gambar utama</string>
    <string name="callDesc">ini adalah tombol untuk menelepon</string>
    <string name="mapsDesc">ini adalah gambar untuk menuju maps</string>
    <string name="gambarmDesc">ini adalah gambar maps</string>
    <string name="jenisDesc">ini adalah image jenis</string>
    <string name="appName">LAMASYA</string>
    <string name="onBoardingDesc">Sebuah aplikasi informasi di saat terjadi kejadian gawat darurat</string>
    <string name="logoLamasya">ini adalah logo lamasya</string>
    <string name="statusBtn">ini adalah tombol untuk membuat status</string>
    <string name="iconMaps">ini adalah icon maps</string>
</resources>
