<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="404dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/iv_content"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/contentDesc"/>

        <TextView
            android:id="@+id/tv_instansi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/nama_instansi"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_content"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_address"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/iv_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_instansi"
            app:srcCompat="@drawable/ic_baseline_location_on_24"
            android:contentDescription="@string/locationDesc"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/address"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_address"
            app:layout_constraintStart_toEndOf="@+id/iv_address"
            app:layout_constraintTop_toTopOf="@+id/iv_address"
            tools:ignore="SmallSp" />


        <ImageView
            android:id="@+id/iv_icon_rs"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/iv_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_address"
            app:srcCompat="@drawable/hospital_svgrepo_com"
            android:contentDescription="@string/rsDesc"/>

        <TextView
            android:id="@+id/tv_typeRS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/typeRs"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_rs"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_rs"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_rs"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/iv_call"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/iv_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon_rs"
            app:srcCompat="@drawable/phone_svgrepo_com"
            android:contentDescription="@string/CallDesc"/>

        <TextView
            android:id="@+id/tv_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/call"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_call"
            app:layout_constraintStart_toEndOf="@+id/iv_call"
            app:layout_constraintTop_toTopOf="@+id/iv_call"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_timework"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/buka"
            android:textColor="@color/orange_300"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_call"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/iv_dood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_timework"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_timework"
            app:srcCompat="@drawable/dood"
            android:contentDescription="@string/doodDesc"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>